--- a/mac/shop/templates/tracker.html
+++ b/mac/shop/templates/tracker.html
@@ -1,4 +1,34 @@
 {% extends 'basic.html' %}
 
 {% block title%} tracking page{% endblock %}
-{% block body %} This is tracker body page {% endblock %}
+{% block body %} 
+
+<div class="container my-4">
+    <h3>Contact Us</h3>
+  
+      <form action="" method="post">{%  csrf_token %}
+      <div class="form-group">
+
+        <label for="exampleFormControlInput1">Name</label>
+        <input type="text" class="form-control" id="name" name="name" placeholder="Enter Your Name">
+      </div>
+       <div class="form-group">
+          <label for="exampleFormControlInput1">Email</label>
+          <input type="email" class="form-control" id="email" name="email" placeholder="Enter Your email">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Phone</label>
+          <input type="text" class="form-control" id="phone" name="phone" placeholder="Enter Your phone no.">
+        </div>
+        
+          <div class="form-group">
+          <label for="exampleFormControlTextarea1">How May Help You</label>
+          <textarea class="form-control" id="desc" name="desc" rows="3"></textarea>
+            
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>            
+    </form>
+</div>
+
+
+{% endblock %}
